<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.univocity</groupId>
	<artifactId>envlp</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>envlp</name>
	<description>Free-commerce</description>

	<organization>
		<name>Univocity Software Pty Ltd</name>
		<url>www.univocity.com</url>
	</organization>

	<url>http://github.com/univocity/envlp</url>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>jbax</id>
			<name>Jeronimo Backes</name>
			<email>jbax@univocity.com</email>
			<timezone>+9:30</timezone>
		</developer>

		<developer>
			<id>dev</id>
			<name>univocity development team</name>
			<email>dev@univocity.com</email>
		</developer>
	</developers>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>15</source>
					<target>15</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<forkCount>1</forkCount>
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<includes>
						<include>**/*.java</include>
					</includes>
					<systemPropertyVariables>
						<testng.dtd.http>true</testng.dtd.http>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<excludes>
						<exclude>**/cli/**</exclude>
						<exclude>**/*.bat</exclude>
						<exclude>**/*.sh</exclude>
						<exclude>**/*.command</exclude>
						<exclude>**/*.properties</exclude>
						<exclude>**/*.xml</exclude>
						<exclude>**/*.txt</exclude>
					</excludes>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>com.univocity.envlp.Main</mainClass>
						</manifest>
						<manifestEntries>
							<Class-Path>config/</Class-Path>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>install</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/config</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources</directory>
									<includes>
										<include>**/*.properties</include>
										<include>**/*.xml</include>
										<include>**/*.txt</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-script</id>
						<phase>install</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources</directory>
									<includes>
										<include>**/cli/**</include>
										<include>**/*.bat</include>
										<include>**/*.sh</include>
										<include>**/*.command</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<phase>install</phase>
						<configuration>
							<tasks>
								<unzip src="${basedir}/jre-lin.zip" dest="${basedir}/target/"/>
								<unzip src="${basedir}/jre-mac.zip" dest="${basedir}/target/"/>
								<unzip src="${basedir}/jre-win.zip" dest="${basedir}/target/"/>

								<move todir="${basedir}/target/lib">
									<fileset dir="${basedir}/target">
										<include name="*.jar"/>
									</fileset>
								</move>
								<zip destfile="${basedir}/target/envlp.zip">
									<zipfileset dir="${basedir}/target/" filemode="755">
										<include name="*.bat"/>
										<include name="*.sh"/>
										<include name="*.command"/>
										<include name="*.jar"/>
										<include name="config/**"/>
										<include name="jre-lin/**"/>
										<include name="jre-win/**"/>
										<include name="jre-mac/**"/>
										<include name="lib/**"/>
										<include name="cli/**"/>
									</zipfileset>
								</zip>

							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<repositories>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>envlp-cardano-wallet</artifactId>
			<version>2020.11.26-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>envlp-stamp</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.4.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.4.0</version>
		</dependency>

		<dependency>
			<groupId>com.github.weisj</groupId>
			<artifactId>darklaf-core</artifactId>
			<version>2.5.3</version>
		</dependency>

		<dependency>
			<groupId>com.github.weisj</groupId>
			<artifactId>darklaf-theme</artifactId>
			<version>2.5.3</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.200</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>5.3.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>5.3.1</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.3.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>5.3.1</version>
		</dependency>

		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock</artifactId>
			<version>2.27.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>envlp-cardano-wallet</artifactId>
			<version>2020.11.26-SNAPSHOT</version>
			<scope>test</scope>
			<type>test-jar</type>
		</dependency>
	</dependencies>
</project>
